# StealthNote

./: CMakeLists.txt  README.md  index.html
resources/: resources.qrc
src/: DataStore.cpp  DataStore.h  HotkeyManager.cpp  HotkeyManager.h  MainWindow.cpp  MainWindow.h  main.cpp
src/widgets/: ClipItemWidget.cpp  ClipItemWidget.h  KeybindPill.cpp  KeybindPill.h  NoteItemWidget.cpp  NoteItemWidget.h
